--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Sudoku",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "./node_modules/karma/bin/karma start karma.conf.js",
     "build": "webpack --mode development",
